Co-authored-by: mzhang055 <mzhang055@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +23,7 @@
           </div>
         </div>
         <div class="flex flex-col items-start mt-12 mb-16 text-left lg:flex-grow lg:w-1/2 lg:pl-6 xl:pl-24 md:mb-0 xl:mt-0">
-          <span class="mb-8 text-xs font-bold tracking-widest text-blue-600 uppercase"> Your tagline </span>
+          <span class="mb-8 text-xs font-bold tracking-widest text-blue-600 uppercase"> nightlight </span>
           <h1 class="mb-8 text-4xl font-bold leading-none tracking-tighter text-neutral-600 md:text-7xl lg:text-5xl">Your Safety Starts Here.</h1>
           <p class="mb-8 text-base leading-relaxed text-left text-gray-500">Free and Premium themes, UI Kit's, templates and landing pages built with Tailwind CSS, HTML &amp; Next.js.</p>
           <div class="flex-col mt-0 lg:mt-6 max-w-7xl sm:flex">
@@ -32,7 +33,7 @@
                 <input id="cta-email" type="email" class="block w-full px-5 py-3 text-base placeholder-gray-300 transition duration-500 ease-in-out transform bg-transparent border border-transparent rounded-md text-neutral-600 focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-300" placeholder="Enter your email  ">
               </div>
               <div class="mt-4 sm:mt-0 sm:ml-3 revue-form-actions">
-                <button type="submit" value="Subscribe" name="member[subscribe]" id="member_submit" class="block w-full px-5 py-3 text-base font-medium text-white bg-blue-600 border border-transparent rounded-lg shadow hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-300 sm:px-10">Notify me</button>
+                <button type="submit" value="Subscribe" name="member[subscribe]" id="member_submit" class="block w-full px-5 py-3 text-base font-medium text-white bg-blue-600 border border-transparent rounded-lg shadow hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-300 sm:px-10">Get Started</button>
               </div>
             </form>
             <div class="sm:max-w-lg sm:flex">
@@ -50,5 +51,5 @@
   </section>
 <!-- This is a comment ignore -->
 </body>
-<script src="https://cdn.tailwindcss.com"></script>
+
 </html>
