--- a/src/index.html
+++ b/src/index.html
@@ -5,51 +5,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="/dist/output.css" rel="stylesheet">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  
+
 </head>
 <body>
-  <section>
-    <div class="px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24">
-      <div class="flex flex-wrap items-center mx-auto max-w-7xl">
-        <div class="w-full lg:max-w-lg lg:w-1/2 rounded-xl">
-          <div>
-            <div class="relative w-full max-w-lg">
-              <div class="absolute top-0 rounded-full bg-violet-300 -left-4 w-72 h-72 mix-blend-multiply filter blur-xl opacity-70 animate-blob" style="filter: none !important;"></div>
+  <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
+    <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+      <header class="flex justify-between items-center py-4 md:py-8 mb-8 md:mb-12 xl:mb-16">
+        <!-- logo - start -->
+        <a href="/" class="inline-flex items-center text-black-800 text-2xl md:text-3xl font-bold gap-2.5" aria-label="logo">
+          <svg width="95" height="94" viewBox="0 0 95 94" class="w-6 h-auto text-red-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M96 0V47L48 94H0V47L48 0H96Z" />
+          </svg>
   
-              <div class="absolute rounded-full bg-fuchsia-300 -bottom-24 right-20 w-72 h-72 mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-4000" style="filter: none !important;"></div>
-              <div class="relative">
-                <img class="object-cover object-center mx-auto rounded-lg shadow-2xl" alt="hero" src="/assets/images/placeholders/squareCard.png">
-              </div>
-            </div>
-          </div>
+          nightlight
+        </a>
+        <!-- logo - end -->
+  
+        <!-- nav - start -->
+        <nav class="hidden lg:flex gap-12">
+          <a href="#" class="text-red-500 text-lg font-semibold">Home</a>
+          <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">About Us</a>
+          <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">Maps</a>
+          <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">News</a>
+        </nav>
+        <!-- nav - end -->
+  
+        <!-- buttons - start -->
+        <a href="#" class="hidden lg:inline-block bg-red-200 hover:bg-gray-red focus-visible:ring ring-red-300 text-black-500 active:text-black-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3">Report It</a>
+  
+        <button type="button" class="inline-flex items-center lg:hidden bg-gray-200 hover:bg-gray-300 focus-visible:ring ring-red-300 text-gray-500 active:text-gray-700 text-sm md:text-base font-semibold rounded-lg gap-2 px-2.5 py-2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
+          </svg>
+  
+          Menu
+        </button>
+        <!-- buttons - end -->
+      </header>
+  
+      <section class="flex flex-col lg:flex-row justify-between gap-6 sm:gap-10 md:gap-16">
+        <!-- content - start -->
+        <div class="xl:w-5/12 flex flex-col justify-center items-center lg:items-start sm:text-center lg:text-left lg:py-12 xl:py-24">
+          <h1 class="text-black-800 text-4xl sm:text-5xl md:text-6xl font-bold mb-8 md:mb-12">Your Safety Starts Here.</h1>
+  
+          <p class="lg:w-4/5 text-gray-500 xl:text-lg leading-relaxed mb-8 md:mb-12">01. Enter your destination <br>
+            02. Read reviews<br>
+            03. Follow route <br>
+            04. Cotribute and collaborate!
+            </p>
+  
+          <form class="w-full md:max-w-md flex gap-2">
+            <input placeholder="Email" class="w-full flex-1 bg-gray-50 text-gray-800 placeholder-gray-500 border focus:ring ring-red-300 rounded outline-none transition duration-100 px-3 py-2" />
+  
+            <button class="inline-block bg-red-500 hover:bg-red-600 active:bg-red-700 focus-visible:ring ring-red-300 text-white text-sm md:text-base font-semibold text-center rounded outline-none transition duration-100 px-8 py-2" >Sign up</button>
+          </form>
         </div>
-        <div class="flex flex-col items-start mt-12 mb-16 text-left lg:flex-grow lg:w-1/2 lg:pl-6 xl:pl-24 md:mb-0 xl:mt-0">
-          <span class="mb-8 text-xs font-bold tracking-widest text-blue-600 uppercase"> nightlight </span>
-          <h1 class="mb-8 text-4xl font-bold leading-none tracking-tighter text-neutral-600 md:text-7xl lg:text-5xl">Your Safety Starts Here.</h1>
-          <p class="mb-8 text-base leading-relaxed text-left text-gray-500">Free and Premium themes, UI Kit's, templates and landing pages built with Tailwind CSS, HTML &amp; Next.js.</p>
-          <div class="flex-col mt-0 lg:mt-6 max-w-7xl sm:flex">
-            <form action="" method="post" id="revue-form" name="revue-form" target="_blank" class="p-2 mt-8 transition duration-500 ease-in-out transform border2 bg-gray-50 rounded-xl sm:max-w-lg sm:flex">
-              <div class="flex-1 min-w-0 revue-form-group">
-                <label for="member_email" class="sr-only">Email address</label>
-                <input id="cta-email" type="email" class="block w-full px-5 py-3 text-base placeholder-gray-300 transition duration-500 ease-in-out transform bg-transparent border border-transparent rounded-md text-neutral-600 focus:outline-none focus:border-transparent focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-300" placeholder="Enter your email  ">
-              </div>
-              <div class="mt-4 sm:mt-0 sm:ml-3 revue-form-actions">
-                <button type="submit" value="Subscribe" name="member[subscribe]" id="member_submit" class="block w-full px-5 py-3 text-base font-medium text-white bg-blue-600 border border-transparent rounded-lg shadow hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-300 sm:px-10">Get Started</button>
-              </div>
-            </form>
-            <div class="sm:max-w-lg sm:flex">
-              <p class="mt-3 text-xs text-gray-500">
-                By subscribing, you agree with Revue’s
-                <a target="_blank" href="https://www.getrevue.co/terms">Terms of Service</a>
-                and
-                <a target="_blank" href="https://www.getrevue.co/privacy">Privacy Policy</a>.
-              </p>
-            </div>
-          </div>
+        <!-- content - end -->
+  
+        <!-- image - start -->
+        <div class="xl:w-5/12 h-48 lg:h-auto bg-gray-100 overflow-hidden shadow-lg rounded-lg">
+          <img src="assets/img/ttc.png" alt="ttc" class="w-full h-full object-cover object-center" />
         </div>
-      </div>
+        <!-- image - end -->
+      </section>
     </div>
-  </section>
-<!-- This is a comment ignore -->
+  </div>
+
 </body>
 
 </html>
