Co-authored-by: mzhang055 <mzhang055@users.noreply.github.com> Co-authored-by: emmaashi <emmaashi@users.noreply.github.com>

--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,10 @@
 <link href="/dist/output.css" rel="stylesheet">
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 <body>
-    <button onclick = ""
+    <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
+        <h1 class = "display-5 fw bold">About Us</h1>
+            <p class ="lead mb-4">Our service, nightlight, is devoted to improving the transportation security of users all around the world. With our comprehensive mapping system and user base, we will be able to reduce the risk of harassment and violence that females, minorities and people in general experience on public transport. 
+                Embark with us on this journey to be your light in the night!</p>
 
 </body>
 </html>
