--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <a href="#" class="text-red-500 text-lg font-semibold">Home</a>
           <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">About Us</a>
           <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">Maps</a>
-          <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">News</a>
+          <a href="news.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">News</a>
         </nav>
         <!-- nav - end -->
   
@@ -66,7 +66,7 @@
   
         <!-- image - start -->
         <div class="xl:w-5/12 h-48 lg:h-auto bg-gray-100 overflow-hidden shadow-lg rounded-lg">
-          <img src="assets/img/ttc.png" alt="ttc" class="w-full h-full object-cover object-center" />
+          <img src="assets/img/ttc.png" alt="ttc" width="500" height="500"></img>
         </div>
         <!-- image - end -->
       </section>
