So that anyone can access it...

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
   
         <!-- nav - start -->
         <nav class="hidden lg:flex gap-12">
-          <a href="#" class="text-red-500 text-lg font-semibold">Home</a>
-          <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">About Us</a>
-          <a href="#" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">Maps</a>
+          <a href="index.html" class="text-red-500 text-lg font-semibold">Home</a>
+          <a href="about.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">About Us</a>
+          <a href="maps.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">Maps</a>
           <a href="news.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">News</a>
         </nav>
         <!-- nav - end -->
@@ -59,16 +59,16 @@
           <form class="w-full md:max-w-md flex gap-2">
             <input placeholder="Email" class="w-full flex-1 bg-gray-50 text-gray-800 placeholder-gray-500 border focus:ring ring-red-300 rounded outline-none transition duration-100 px-3 py-2" />
   
-            <button class="inline-block bg-red-500 hover:bg-red-600 active:bg-red-700 focus-visible:ring ring-red-300 text-white text-sm md:text-base font-semibold text-center rounded outline-none transition duration-100 px-8 py-2" >Sign up</button>
+            <button <a href "class="inline-block bg-red-500 hover:bg-red-600 active:bg-red-700 focus-visible:ring ring-red-300 text-white text-sm md:text-base font-semibold text-center rounded outline-none transition duration-100 px-8 py-2" >Sign up</button>
           </form>
         </div>
         <!-- content - end -->
   
-        <!-- image - start -->
-        <div class="xl:w-5/12 h-48 lg:h-auto bg-gray-100 overflow-hidden shadow-lg rounded-lg">
-          <img src="assets/img/ttc.png" alt="ttc" width="500" height="500"></img>
-        </div>
-        <!-- image - end -->
+       <!-- image - start -->
+      <div class="xl:w-5/12 h-48 lg:h-auto bg-gray-100 overflow-hidden shadow-lg rounded-lg">
+        <img src="https://i.redd.it/whkaz2mcx2b51.png" loading="lazy" alt="Photo by Fakurian Design" class="w-full h-full object-cover object-center" />
+      </div>
+      <!-- image - end -->
       </section>
     </div>
   </div>
