--- a/src/news.html
+++ b/src/news.html
@@ -9,6 +9,18 @@
     <title>News</title>
 </head>
 <body>
-    <div id="comment-box"></div>
+    <div class="report-box">
+        <form>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+            
+            <button id="submit-report", onClick=, type="submit">Submit</button>
+        </form>
+    </div>
+
+    <script></script>
+
+    <!-- Link database of route stops-->
+    <script src="./scripts/database.js"></script>
 </body>
 </html>
