--- a/src/about.html
+++ b/src/about.html
@@ -1,18 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nightlight</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="/dist/output.css" rel="stylesheet">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <title>nightlight about</title>
 </head>
 <link href="/dist/output.css" rel="stylesheet">
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-<body>
-    <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
+<div class="bg-white pb-6 sm:pb-8 lg:pb-12">
+    <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+      <header class="flex justify-between items-center py-4 md:py-8 mb-8 md:mb-12 xl:mb-16">
+        <!-- logo - start -->
+        <a href="report.html" class="inline-flex items-center text-black-800 text-2xl md:text-3xl font-bold gap-2.5" aria-label="logo">
+          <i class="fi fi-rr-bulb"></i>
+          nightlight
+        </a>
+        <!-- logo - end -->
+  
+        <!-- nav - start -->
+        <nav class="hidden lg:flex gap-12">
+          <a href="index.html" class="text-gray-500 text-lg font-semibold">Home</a>
+          <a href="about.html" class="text-red-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">About Us</a>
+          <a href="news.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">News</a>
+        </nav>
+        <!-- nav - end -->
+  
+        <!-- buttons - start -->
+        <a href="report.html" class="hidden lg:inline-block bg-red-200 hover:bg-gray-red focus-visible:ring ring-red-300 text-black-500 active:text-black-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3">Report It</a>
+  
+        <button type="button" class="inline-flex items-center lg:hidden bg-gray-200 hover:bg-gray-300 focus-visible:ring ring-red-300 text-gray-500 active:text-gray-700 text-sm md:text-base font-semibold rounded-lg gap-2 px-2.5 py-2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
+          </svg>
+  
+          Menu
+        </button>
+        <!-- buttons - end -->
+      </header>
+  
+      
+    <section>
+        <div class="px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-12 lg:px-24 lg:py-24">
+          <div class="flex flex-col w-full mb-12 text-center">
+            <div class="inline-flex items-center justify-center flex-shrink-0 w-20 h-210mx-auto mb-5 text-bred-600 rounded-full bg-gray-50">
+            </div>
+            <h1 class="max-w-5xl text-2xl font-bold leading-none tracking-tighter text-neutral-600 md:text-5xl lg:text-6xl lg:max-w-7xl">
+              About Us 
+            </h1>
+            <p class="max-w-xl mx-auto mt-8 text-base leading-relaxed text-center text-gray-500">Our service, nightlight, is devoted to improving the transportation security of users all around the world. With our comprehensive mapping system and user base, we will be able to reduce the risk of harassment and violence that females, minorities and people in general experience on public transport. 
+                Embark with us on this journey to be your light in the night!</p>
+            <a class="mx-auto mt-8 text-sm font-semibold text-red-600 hover:text-neutral-600" title="read more"> Learn how our service works below ↓ </a>
+          </div>
+        </div>
+      </section>
+    <section class="text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto flex flex-wrap">
+          <div class="flex flex-wrap w-full">
+            <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
+              <div class="flex relative pb-12">
+                <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
+                  <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
+                </div>
+                <div class="flex-shrink-0 w-10 h-10 rounded-full bg-red-500 inline-flex items-center justify-center text-white relative z-10">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                  </svg>
+                </div>
+                <div class="flex-grow pl-4">
+                  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 1</h2>
+                  <p class="leading-relaxed">Create a nightlight account or remain anonymous.</p>
+                </div>
+              </div>
+              <div class="flex relative pb-12">
+                <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
+                  <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
+                </div>
+                <div class="flex-shrink-0 w-10 h-10 rounded-full bg-red-500 inline-flex items-center justify-center text-white relative z-10">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+                  </svg>
+                </div>
+                <div class="flex-grow pl-4">
+                  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 2</h2>
+                  <p class="leading-relaxed">Allow nightlight to track your location for map services.</p>
+                </div>
+              </div>
+              <div class="flex relative pb-12">
+                <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
+                  <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
+                </div>
+                <div class="flex-shrink-0 w-10 h-10 rounded-full bg-red-500 inline-flex items-center justify-center text-white relative z-10">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <circle cx="12" cy="5" r="3"></circle>
+                    <path d="M12 22V8M5 12H2a10 10 0 0020 0h-3"></path>
+                  </svg>
+                </div>
+                <div class="flex-grow pl-4">
+                  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 3</h2>
+                  <p class="leading-relaxed">Report any suspicious or non-conventional behaviours you see on public transportation stations.</p>
+                </div>
+              </div>
+              <div class="flex relative pb-12">
+                <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
+                  <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
+                </div>
+                <div class="flex-shrink-0 w-10 h-10 rounded-full bg-red-500 inline-flex items-center justify-center text-white relative z-10">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+                    <circle cx="12" cy="7" r="4"></circle>
+                  </svg>
+                </div>
+                <div class="flex-grow pl-4">
+                  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 4</h2>
+                  <p class="leading-relaxed">Communicate and connect with others on community forums</p>
+                </div>
+              </div>
+              <div class="flex relative">
+                <div class="flex-shrink-0 w-10 h-10 rounded-full bg-red-500 inline-flex items-center justify-center text-white relative z-10">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                    <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
+                    <path d="M22 4L12 14.01l-3-3"></path>
+                  </svg>
+                </div>
+                <div class="flex-grow pl-4">
+                  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 5</h2>
+                  <p class="leading-relaxed">Stay Safe!</p>
+                </div>
+              </div>
+            </div>
+            <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="https://images.unsplash.com/photo-1553817999-2cf07aa6fd18?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="step">
+          </div>
+        </div>
+      </section>
+
+
+   <!-- <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
         <h1 class = "display-5 fw bold">About Us</h1>
             <p class ="lead mb-4">Our service, nightlight, is devoted to improving the transportation security of users all around the world. With our comprehensive mapping system and user base, we will be able to reduce the risk of harassment and violence that females, minorities and people in general experience on public transport. 
                 Embark with us on this journey to be your light in the night!</p>
-
+-->
 </body>
 </html>
