--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,8 @@
     <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
       <header class="flex justify-between items-center py-4 md:py-8 mb-8 md:mb-12 xl:mb-16">
         <!-- logo - start -->
-        <a href="/" class="inline-flex items-center text-black-800 text-2xl md:text-3xl font-bold gap-2.5" aria-label="logo">
-          <svg width="95" height="94" viewBox="0 0 95 94" class="w-6 h-auto text-red-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path d="M96 0V47L48 94H0V47L48 0H96Z" />
-          </svg>
-  
+        <a href="report.html" class="inline-flex items-center text-black-800 text-2xl md:text-3xl font-bold gap-2.5" aria-label="logo">
+          <i class="fi fi-rr-bulb"></i>
           nightlight
         </a>
         <!-- logo - end -->
@@ -27,13 +24,12 @@
         <nav class="hidden lg:flex gap-12">
           <a href="index.html" class="text-red-500 text-lg font-semibold">Home</a>
           <a href="about.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">About Us</a>
-          <a href="maps.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">Maps</a>
           <a href="news.html" class="text-gray-600 hover:text-red-500 active:text-red-700 text-lg font-semibold transition duration-100">News</a>
         </nav>
         <!-- nav - end -->
   
         <!-- buttons - start -->
-        <a href="#" class="hidden lg:inline-block bg-red-200 hover:bg-gray-red focus-visible:ring ring-red-300 text-black-500 active:text-black-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3">Report It</a>
+        <a href="report.html" class="hidden lg:inline-block bg-red-200 hover:bg-gray-red focus-visible:ring ring-red-300 text-black-500 active:text-black-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3">Report It</a>
   
         <button type="button" class="inline-flex items-center lg:hidden bg-gray-200 hover:bg-gray-300 focus-visible:ring ring-red-300 text-gray-500 active:text-gray-700 text-sm md:text-base font-semibold rounded-lg gap-2 px-2.5 py-2">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
@@ -59,7 +55,8 @@
           <form class="w-full md:max-w-md flex gap-2">
             <input placeholder="Email" class="w-full flex-1 bg-gray-50 text-gray-800 placeholder-gray-500 border focus:ring ring-red-300 rounded outline-none transition duration-100 px-3 py-2" />
   
-            <button <a href "class="inline-block bg-red-500 hover:bg-red-600 active:bg-red-700 focus-visible:ring ring-red-300 text-white text-sm md:text-base font-semibold text-center rounded outline-none transition duration-100 px-8 py-2" >Sign up</button>
+            <a href="about.html" class="inline-block bg-red-500 hover:bg-red-600 active:bg-red-700 focus-visible:ring ring-red-300 text-white text-sm md:text-base font-semibold text-center rounded outline-none transition duration-100 px-8 py-2">Sign up</a>
+          </form>
           </form>
         </div>
         <!-- content - end -->
@@ -72,6 +69,77 @@
       </section>
     </div>
   </div>
+  <div class="bg-white py-6 sm:py-8 lg:py-12">
+    <div class="max-w-screen-xl px-4 md:px-8 mx-auto">
+      <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold text-center mb-8 md:mb-12">User Reviews</h2>
+  
+      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-y-10 sm:gap-y-12 lg:divide-x">
+        <!-- quote - start -->
+        <div class="flex flex-col items-center gap-4 md:gap-6 sm:px-4 lg:px-8">
+          <div class="text-gray-600 text-center">"I was always afraid to walk to the subway station after work because of the violent instances lately. Nightlight's map feature has been a gamechanger!”</div>
+  
+          <div class="flex flex-col sm:flex-row items-center gap-2 md:gap-3">
+            <div class="w-12 md:w-14 h-12 md:h-14 bg-gray-100 rounded-full overflow-hidden shadow-lg">
+              <img src="https://images.unsplash.com/photo-1542740348-39501cd6e2b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" loading="lazy" alt="Photo by Radu Florin" class="w-full h-full object-cover object-center" />
+            </div>
+  
+            <div>
+              <div class="text-red-500 text-sm md:text-base font-bold text-center sm:text-left">Behky Smith</div>
+              <p class="text-gray-500 text-sm md:text-sm text-center sm:text-left">she/her</p>
+            </div>
+          </div>
+        </div>
+        <!-- quote - end -->
+  
+        <!-- quote - start -->
+        <div class="flex flex-col items-center gap-4 md:gap-6 sm:px-4 lg:px-8">
+          <div class="text-gray-600 text-center">“Nightlight makes it so easily to report suspicious behaviour on public transit.”</div>
+  
+          <div class="flex flex-col sm:flex-row items-center gap-2 md:gap-3">
+            <div class="w-12 md:w-14 h-12 md:h-14 bg-gray-100 rounded-full overflow-hidden shadow-lg">
+              <img src="https://images.unsplash.com/photo-1532073150508-0c1df022bdd1?auto=format&q=75&fit=crop&w=112" loading="lazy" alt="Photo by christian ferrer" class="w-full h-full object-cover object-center" />
+            </div>
+  
+            <div>
+              <div class="text-red-500 text-sm md:text-base font-bold text-center sm:text-left">Kate Berg</div>
+              <p class="text-gray-500 text-sm md:text-sm text-center sm:text-left">they/them</p>
+            </div>
+          </div>
+        </div>
+        <!-- quote - end -->
+  
+        <!-- quote - start -->
+        <div class="flex flex-col items-center gap-4 md:gap-6 sm:px-4 lg:px-8">
+          <div class="text-gray-600 text-center">“I feel more safe and alert after I started using Nightlight. ”</div>
+  
+          <div class="flex flex-col sm:flex-row items-center gap-2 md:gap-3">
+            <div class="w-12 md:w-14 h-12 md:h-14 bg-gray-100 rounded-full overflow-hidden shadow-lg">
+              <img src="https://images.unsplash.com/photo-1620052800096-e2861f0e1e3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" loading="lazy" alt="Photo by Ayo Ogunseinde" class="w-full h-full object-cover object-center" />
+            </div>
+  
+            <div>
+              <div class="text-red-500 text-sm md:text-base font-bold text-center sm:text-left">Sam Chen</div>
+              <p class="text-gray-500 text-sm md:text-sm text-center sm:text-left">she/her</p>
+            </div>
+          </div>
+        </div>
+        <!-- quote - end -->
+      </div>
+    </div>
+  </div>
+  <!--footer-->
+  <footer class="bg-white" aria-labelledby="footer-heading">
+    <h2 id="footer-heading" class="sr-only">Footer</h2>
+  
+    <div class="px-4 py-12 mx-auto bg-gray-50 max-w-7xl sm:px-6 lg:px-16">
+      <div class="flex flex-wrap items-baseline lg:justify-center">
+        <span class="mt-2 text-sm font-light text-gray-500">
+          Copyright © 2022 - 2023
+          <a class="mx-2 text-wickedblue hover:text-gray-500" rel="noopener noreferrer">NightLight</a>
+        </span>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
