--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="/dist/output.css" rel="stylesheet">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-    <title>nightlight about</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💡</text></svg>">
+  <title>Our Mission</title>
 </head>
 <link href="/dist/output.css" rel="stylesheet">
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
@@ -52,11 +53,11 @@
             </h1>
             <p class="max-w-xl mx-auto mt-8 text-base leading-relaxed text-center text-gray-500">Our service, nightlight, is devoted to improving the transportation security of users all around the world. With our comprehensive mapping system and user base, we will be able to reduce the risk of harassment and violence that females, minorities and people in general experience on public transport. 
                 Embark with us on this journey to be your light in the night!</p>
-            <a class="mx-auto mt-8 text-sm font-semibold text-red-600 hover:text-neutral-600" title="read more"> Learn how our service works below ↓ </a>
+            <a class="mx-auto mt-8 text-sm font-semibold text-red-600 hover:text-neutral-600" title="read more" href="#scrolldown""> Learn how our service works below ↓ </a>
           </div>
         </div>
       </section>
-    <section class="text-gray-600 body-font">
+    <section id="scrolldown" class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="flex flex-wrap w-full">
             <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
