--- a/src/forum.html
+++ b/src/forum.html
@@ -6,7 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="/dist/output.css" rel="stylesheet">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-    <title>nightlight community forum</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💡</text></svg>">
+    <title>Community Forum</title>
 </head>
 <body>
     <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
@@ -40,7 +41,7 @@
             <!-- buttons - end -->
           </header>
     <!-- forum -->
-<div class="py-12 px-4 md:px-6 2xl:px-0 2xl:container 2xl:mx-auto flex justify-center items-center">
+<div class="py-0 px-4 md:px-6 2xl:px-0 2xl:container 2xl:mx-auto flex justify-center items-center">
      <div class="flex flex-col justify-start items-start w-full space-y-8">
          <div class="flex justify-start items-start">
              <p class="text-3xl lg:text-4xl font-semibold leading-7 lg:leading-9 text-gray-800 dark:text-white ">Community Forum</p>
@@ -50,7 +51,7 @@
  
                  <div class="mt-6 flex justify-start items-center flex-row space-x-2.5">
                      <div>
-                         <img src="https://i.ibb.co/QcqyrVG/Mask-Group.png" alt="girl-avatar" />
+                         <img src="https://i.ibb.co/QcqyrVG/Mask-Group.png" alt="girl-avatar"/>
                      </div>
                      <div class="flex flex-col justify-start items-start space-y-2">
                          <p class="text-base font-medium leading-none text-gray-800 dark:text-white">Anna Kendrick</p>
@@ -67,27 +68,30 @@
                      <div class="cursor-pointer mt-2 md:mt-0">
                      </div>
                  </div>
-                 <div id="menu2" class="hidden md:block">
+                 <div id="menu2" class="flex flex-row justify-between items-start">
                      <p class="mt-3 text-base leading-normal text-gray-600 dark:text-white w-full md:w-9/12 xl:w-5/6">I was able to get picture of the spitting man (in the white t-shirt). STAY AWAY</p>
-                     <div class="mt-6 flex flex-row justify-start items-start space-x-4"
+                  </div>
+                  <div class="mt-6 flex flex-row justify-start items-start space-x-4"
                          <div class="py-4 px-8 bg-gray-100">
-                             <img src="https://media.blogto.com/articles/20220805-ttc-doors_copy_photos_v2_custom.jpg?w=2048&cmd=resize_then_crop&height=1365&quality=70" alt="spitting-man" />
-                         </div>
-                     </div>
-                     <!-- second person-->
-                     <div class="mt-6 flex justify-start items-center flex-row space-x-2.5">
-                        <div>
-                            <img src="https://i.ibb.co/RCTGZTc/Mask-Group-1.png alt="girl-avatar" />
+                             <img src="https://media.blogto.com/articles/20220805-ttc-doors_copy_photos_v2_custom.jpg?w=2048&cmd=resize_then_crop&height=1365&quality=70" alt="spitting-man" width=500px />
                         </div>
-                     <div class="mt-6 flex justify-start items-center flex-row space-x-2.5">
-                        <div class="flex flex-col justify-start items-start space-y-2">
-                            <p class="text-base font-medium leading-none text-gray-800 dark:text-white">Steve Williams</p>
-                            <p class="text-sm leading-none text-gray-600 dark:text-white">August 28 2022</p>
-                        </div>
-                    </div>
-                </div>
+                  </div>
+            </div>
+              <!-- second person-->
    
                 <div class="w-full flex justify-start items-start flex-col bg-gray-50 dark:bg-gray-800 md:px-8 py-8">
+                  <div class="mt-6 flex justify-start items-center flex-row space-x-2.5">
+                    <div>
+                        <img src="https://i.ibb.co/RCTGZTc/Mask-Group-1.png" alt="girl-avatar" />
+                    </div>
+                  <div class="mt-6 flex justify-start items-center flex-row space-x-2.5">
+                    <div class="flex flex-col justify-start items-start space-y-2">
+                        <p class="text-base font-medium leading-none text-gray-800 dark:text-white">Steve Williams</p>
+                        <p class="text-sm leading-none text-gray-600 dark:text-white">August 28 2022</p>
+                    </div>
+                </div>
+              </div>
+              <br>
                     <div class="flex flex-col md:flex-row flex justify-between w-full">
                         <div class="flex flex-row justify-between items-start">
                             <p class="text-xl md:text-2xl font-medium leading-normal text-gray-800 dark:text-white">Backpack stolen at Spadina station by man wearing a yellow hat!</p>
@@ -95,7 +99,7 @@
                         <div class="cursor-pointer mt-2 md:mt-0">
                         </div>
                     </div>
-                    <div id="menu2" class="hidden md:block">
+                    <div id="menu2" class="mt-6 flex flex-row justify-start items-start space-x-4">
                         <p class="mt-3 text-base leading-normal text-gray-600 dark:text-white w-full md:w-9/12 xl:w-5/6">A man ran off with my backpack on the northbound platform!!! If you see him with a purple leather backpack, REPORT HIM TO THE POLICE!!</p>
                         <div class="mt-6 flex flex-row justify-start items-start space-x-4">
                             <div class="py-4 px-8 bg-gray-100">
@@ -107,7 +111,6 @@
                      </div>
                  </div>
              </div>
-         </div>
      </div>
  </div>
 
