--- a/src/report.html
+++ b/src/report.html
@@ -6,7 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="/dist/output.css" rel="stylesheet">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-    <title>nightlight report</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💡</text></svg>">
+  <title>Report It!</title>
 </head>
 <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
     <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
@@ -49,7 +50,7 @@
           </div>
           <div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
             <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Report It</h2>
-            <p class="leading-relaxed mb-5 text-gray-600">Select the TTC Station on the map and fill our the information below.</p>
+            <p class="leading-relaxed mb-5 text-gray-600">Select a public transit station on the map and fill our the information below.</p>
             <div class="relative mb-4">
               <label for="subject" class="leading-7 text-sm text-gray-600">Subject</label>
               <input type="text" id="name" name="name" class="w-full bg-white rounded border border-gray-300 focus:border-red-500 focus:ring-2 focus:ring-red-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
